# youtube-rag-project

./: .gitignore  README.md  app.py  main.py  migrate_to_pinecone.py  pyproject.toml
src/: chain.py  indexing.py  retrieval.py  utils.py
vectorstore/: index.faiss  index.pkl
vectorstore/3743pFGYo9E/: index.faiss  index.pkl
vectorstore/Gfr50f6ZBvo/: index.faiss  index.pkl
vectorstore/rRrBbyv3ChM/: index.faiss  index.pkl
vectorstore/v0ynfDPpe4E/: index.faiss  index.pkl
vectorstore/z5971kOLRbU/: index.faiss  index.pkl
