[project]
name = "youtube-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.20.7",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.4",
]
